fix menu not showing active tab

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -42,7 +42,7 @@ a:visited {
     z-index: 1;
 }
 
-.active {
+.pure-menu-item > .active {
     color: #e8d269;
 }
 
